# server/models/accountModel.ts
@@ -1,0 +1,4 @@
+export interface AccountModel {
+  id:number,
+  mailAddress:string
+}
