# server/models/managerModel.ts
@@ -1,0 +1,6 @@
+export interface ManagerModel{
+  managerId:number;
+  managerName:string;
+  managerMailAddress:string;
+  password:string;
+}
